@startuml
'https://plantuml.com/class-diagram
class Netflix
class User{
username
password
setefilm
gemtefilm
}

abstract class Medie{
rating
udgivelsesår
gener
}
class Film
class Series
class Season
class TextUI
class FilIO

Netflix *-- User
User <|--MyList
Netflix *-- Medie
Medie <|-- Film
Medie <|-- Series
Series <|-- Season
Netflix *-- FilIO
Netflix *-- TextUI

@enduml